After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660434 - Brightness reverted back to incorrect level after returning from idle
Brightness reverted back to incorrect level after returning from idle
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
3.2.x
Other Linux
: Normal trivial
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
: 661107 661108 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-09-29 10:06 UTC by Scott Percival
Modified: 2011-10-07 09:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Scott Percival 2011-09-29 10:06:10 UTC
Steps to reproduce the problem
1. Start gnome-settings-daemon with a relatively high screen brightness and "Dim screen to save power" enabled
2. Allow screen to go idle and dim/restore at least once
3. Disable "Dim screen to save power"
4. Change brightness to a lower setting
5. Wait about 30 seconds and move the mouse, the original high screen brightness will return

I think the problem may be caused (indirectly) by http://git.gnome.org/browse/gnome-settings-daemon/commit/plugins/power/gsd-power-manager.c?id=67785fa2b1043bd5397669f92abbd210dbf23f24 - with "manager->priv->pre_dim_brightness" not being set to -1 after resetting the backlight. The problem does not occur if gsd is started with "Dim screen to save power" disabled.
Comment 1 Richard Hughes 2011-09-29 13:36:28 UTC
I've pushed this to master:

commit 51ba98ff6346007d252b2450ed4c1a479c41fb19
Author: Richard Hughes <richard@hughsie.com>
Date:   Thu Sep 29 14:32:17 2011 +0100

    power: Do not revert to the pre-idle brightness if idle dimming is disabled
    
    We want to set manager->priv->pre_dim_brightness = -1 to indicate that we're
    restored the value and that no further restoration is required, as the user may
    have already altered the level.
    
    This will only happen if you disable dimming at runtime after having dimmed at
    least once.
    
    Resolves https://bugzilla.gnome.org/show_bug.cgi?id=660434

Can you test with that commit picked into a branch based on gnome-3-2 please, and if that works then I'll push to 3-2. Thanks.
Comment 2 Michel Alexandre Salim 2011-10-06 21:16:22 UTC
*** Bug 661108 has been marked as a duplicate of this bug. ***
Comment 3 Michel Alexandre Salim 2011-10-06 21:27:58 UTC
Given the various screen brightness fixes applied since gsd 3.2.0 was tagged and released, when can we see a 3.2.1 release?

From

$ git log GNOME_SETTINGS_DAEMON_3_2_0..HEAD ./gsd-power-manager.c

it looks like most of the problems I'm experiencing on Fedora 16 are already fixed in Git (see the duplicate bug 661108)
Comment 4 Richard Hughes 2011-10-07 09:48:52 UTC
*** Bug 661107 has been marked as a duplicate of this bug. ***
Comment 5 Richard Hughes 2011-10-07 09:49:46 UTC
(In reply to comment #3)
> Given the various screen brightness fixes applied since gsd 3.2.0 was tagged
> and released, when can we see a 3.2.1 release?

October 17th, as per https://live.gnome.org/ThreePointOne

Richard.