power: Do not revert to the pre-idle brightness if idle dimming is disabled

We want to set manager->priv->pre_dim_brightness = -1 to indicate that we're
restored the value and that no further restoration is required, as the user may
have already altered the level.

This will only happen if you disable dimming at runtime after having dimmed at
least once.

Resolves https://bugzilla.gnome.org/show_bug.cgi?id=660434