plugins/power/gsd-power-manager.c
@@ -2756,6 +2756,7 @@ idle_set_mode (GsdPowerManager *manager, GsdPowerIdleMode mode)
                                 g_error_free (error);
                                 return;
                         }
+                        manager->priv->pre_dim_brightness = -1;
                 }
         }
 }
